// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders form when shouldShowNewPassword is false 1`] = `
Array [
  <div
    className="root"
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="ffa82815-20de-4890-9f48-ccb921b2841a"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="f3df51ad-acd0-49ec-b346-0081571613f7"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="b3185f00-14fb-4e34-95d5-dfebe2eb888d"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="password"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          Password
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 1,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              autoComplete="current-password"
              className="input"
              id="53446573-07f0-41cd-a887-f73b54dbf2d7"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              type="password"
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          >
            <button
              className="passwordButton"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          className="root"
        />
      </div>
    </div>
  </div>,
  <div
    className="changePasswordButtonContainer"
  >
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Change Password"
          id="global.changePassword"
        />
      </span>
    </button>
  </div>,
]
`;

exports[`renders form when shouldShowNewPassword is true  1`] = `
<div
  className="root"
>
  <div
    className="firstname"
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="firstname"
      >
        First Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="92229792-497a-4885-bdbd-43f6880a1bd2"
            name="firstname"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
  </div>
  <div
    className="lastname"
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="lastname"
      >
        Last Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="e729d436-601a-4d2e-baf0-c5d2a54afd7a"
            name="lastname"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
  </div>
  <div
    className="email"
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="email"
      >
        Email
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="ee264aaa-91ef-4119-a8d9-cf9842590c94"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
  </div>
  <div
    className="password"
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        Current Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="current-password"
            className="input"
            id="a4bc978b-894e-431e-b362-1cb4832ead71"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        >
          <button
            className="passwordButton"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
  </div>
  <div
    className="newPassword"
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        New Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="292b5535-079d-46bd-839b-1d27d9ebf6da"
            name="newPassword"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        >
          <button
            className="passwordButton"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
  </div>
</div>
`;
